# sigmaker

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: release.yml
IDA Pro SigMaker/: Main.h  Utils.cpp  Utils.h  Version.h
